--- a/test.ipynb
+++ b/test.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJPGxTM1nMBz7845UNN+Ra",
+      "authorship_tag": "ABX9TyMNxSmwcce5ouqVcmAQNJXa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "import datetime\n",
         "import os\n",
         "\n",
-        "list_test = [datetime.datetime.now()]\n",
+        "list_test = [datetime.datetime.now(),1]\n",
         "\n",
         "# Specify the file path within the data folder in the GitHub workspace\n",
         "file_path = 'test_data.txt'\n",
