--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -99,7 +99,11 @@
       "source": [
         "# Replace these with your GitHub credentials\n",
         "username = \"jeanbouteiller-ds\"\n",
-        "password= \"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\"\n",
+        "\n",
+        "github_url = \"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/password.txt\"\n",
+        "response = requests.get(github_url)\n",
+        "\n",
+        "password= response.text.replace('\\n','')\n",
         "repository_name = \"tennis_prediction\"\n",
         "branch_name = \"main\"  # Replace with your branch name\n",
         "\n",
@@ -138,7 +142,7 @@
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 27,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -445,7 +449,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOlJuWsHluajfnflEt24Fad",
+      "authorship_tag": "ABX9TyMtNAfeSWDGV2tbQk6b7Fxq",
       "include_colab_link": true
     },
     "kernelspec": {
