--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -450,7 +450,7 @@
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
       "authorship_tag": "ABX9TyNzOPh2/bHkSKjcWDk5GrvC",
-      "include_colab_link": true
+      "include_colab_link": True
     },
     "kernelspec": {
       "display_name": "Python 3",
