--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -449,8 +449,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNzOPh2/bHkSKjcWDk5GrvC",
-      "include_colab_link": "true"
+      "authorship_tag": "ABX9TyNzOPh2/bHkSKjcWDk5GrvC"
     },
     "kernelspec": {
       "display_name": "Python 3",
