--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -62,8 +62,8 @@
         }
       ],
       "source": [
-        "!pip install requests\n",
-        "!pip install PyGithub  # Install the PyGitHub library"
+        "# pip install requests\n",
+        "# !pip install PyGithub  # Install the PyGitHub library"
       ]
     },
     {
@@ -449,7 +449,8 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNzOPh2/bHkSKjcWDk5GrvC"
+      "authorship_tag": "ABX9TyPgBlV2klQGWAi3AFEl8z+L",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
