--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -62,9 +62,19 @@
         }
       ],
       "source": [
-        "# pip install requests\n",
-        "# !pip install PyGithub  # Install the PyGitHub library"
+        "pip install requests"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install PyGithub  # Install the PyGitHub library"
+      ],
+      "metadata": {
+        "id": "QwwaMfY3hF2G"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -449,7 +459,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPgBlV2klQGWAi3AFEl8z+L",
+      "authorship_tag": "ABX9TyNP2jUIZKh0IZaMaP1YtsRx",
       "include_colab_link": true
     },
     "kernelspec": {
