--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -12,69 +12,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 59,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Gorg-TjzXeal",
-        "outputId": "aef50d60-6bf2-4e50-fd80-f360b343ccaf"
+        "id": "Gorg-TjzXeal"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (2.31.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests) (3.3.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests) (2.0.6)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests) (2023.7.22)\n",
-            "Collecting PyGithub\n",
-            "  Downloading PyGithub-2.1.1-py3-none-any.whl (302 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.9/302.9 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting pynacl>=1.4.0 (from PyGithub)\n",
-            "  Downloading PyNaCl-1.5.0-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (856 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m856.7/856.7 kB\u001b[0m \u001b[31m30.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: python-dateutil in /usr/local/lib/python3.10/dist-packages (from PyGithub) (2.8.2)\n",
-            "Requirement already satisfied: requests>=2.14.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (2.31.0)\n",
-            "Collecting pyjwt[crypto]>=2.4.0 (from PyGithub)\n",
-            "  Downloading PyJWT-2.8.0-py3-none-any.whl (22 kB)\n",
-            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (4.5.0)\n",
-            "Requirement already satisfied: urllib3>=1.26.0 in /usr/local/lib/python3.10/dist-packages (from PyGithub) (2.0.6)\n",
-            "Collecting Deprecated (from PyGithub)\n",
-            "  Downloading Deprecated-1.2.14-py2.py3-none-any.whl (9.6 kB)\n",
-            "Requirement already satisfied: cryptography>=3.4.0 in /usr/local/lib/python3.10/dist-packages (from pyjwt[crypto]>=2.4.0->PyGithub) (41.0.4)\n",
-            "Requirement already satisfied: cffi>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from pynacl>=1.4.0->PyGithub) (1.16.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.14.0->PyGithub) (3.3.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.14.0->PyGithub) (3.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.14.0->PyGithub) (2023.7.22)\n",
-            "Requirement already satisfied: wrapt<2,>=1.10 in /usr/local/lib/python3.10/dist-packages (from Deprecated->PyGithub) (1.15.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil->PyGithub) (1.16.0)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.4.1->pynacl>=1.4.0->PyGithub) (2.21)\n",
-            "Installing collected packages: pyjwt, Deprecated, pynacl, PyGithub\n",
-            "  Attempting uninstall: pyjwt\n",
-            "    Found existing installation: PyJWT 2.3.0\n",
-            "    Uninstalling PyJWT-2.3.0:\n",
-            "      Successfully uninstalled PyJWT-2.3.0\n",
-            "Successfully installed Deprecated-1.2.14 PyGithub-2.1.1 pyjwt-2.8.0 pynacl-1.5.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "pip install requests"
+        "%%capture\n",
+        "!pip install requests\n",
+        "!pip install PyGithub  # Install the PyGitHub library"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install PyGithub  # Install the PyGitHub library"
-      ],
-      "metadata": {
-        "id": "QwwaMfY3hF2G"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -459,7 +406,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNP2jUIZKh0IZaMaP1YtsRx",
+      "authorship_tag": "ABX9TyNZ+IyLGngQ4BOAEq3DHL/u",
       "include_colab_link": true
     },
     "kernelspec": {
