--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -54,52 +54,61 @@
     {
       "cell_type": "code",
       "source": [
-        "# # Replace these with your GitHub credentials\n",
-        "# username = \"jeanbouteiller-ds\"\n",
+        "# Replace these with your GitHub credentials\n",
+        "username = \"jeanbouteiller-ds\"\n",
         "\n",
-        "# github_url = \"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/password.txt\"\n",
-        "# response = requests.get(github_url)\n",
+        "github_url = \"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/password.txt\"\n",
+        "response = requests.get(github_url)\n",
         "\n",
-        "# password= response.text.replace('\\n','')\n",
-        "# repository_name = \"tennis_prediction\"\n",
-        "# branch_name = \"main\"  # Replace with your branch name\n",
-        "\n",
-        "\n",
-        "# # Initialize the GitHub client\n",
-        "# g = Github(username, password)\n",
-        "\n",
-        "# # Access the desired repository\n",
-        "# repo = g.get_user().get_repo(repository_name)\n",
+        "password= response.text.replace('\\n','')\n",
+        "repository_name = \"tennis_prediction\"\n",
+        "branch_name = \"main\"  # Replace with your branch name\n",
         "\n",
         "\n",
-        "# def add_file_github(file_name,file_content):\n",
-        "#   try:\n",
-        "#       file = repo.get_contents(file_name, ref=branch_name)\n",
-        "#       sha = file.sha\n",
-        "#   except Exception as e:\n",
-        "#       sha = None\n",
+        "# Initialize the GitHub client\n",
+        "g = Github(username, password)\n",
         "\n",
-        "#   if sha:\n",
-        "#       repo.update_file(file_name, \"Update file\", file_content, sha, branch_name)\n",
-        "#       # print(f\"Updated {file_name} in {repository_name}\")\n",
-        "#   else:\n",
-        "#       repo.create_file(file_name, \"Create file\", file_content, branch_name)\n",
-        "#       # print(f\"Created {file_name} in {repository_name}\")\n",
+        "# Access the desired repository\n",
+        "repo = g.get_user().get_repo(repository_name)\n",
         "\n",
-        "# def get_file_content(file_name):\n",
-        "#   file_content = repo.get_contents(file_name, ref=branch_name)\n",
-        "#   file_content = file_content.decoded_content.decode(\"utf-8\")\n",
-        "#   if file_name.split('.')[1]=='txt':\n",
-        "#     file_content=eval(file_content)\n",
-        "#     return(file_content)\n",
-        "#   if file_name.split('.')[1]=='csv':\n",
-        "#     file_content=pd.read_csv(StringIO(file_content))\n",
-        "#     return(file_content)"
+        "\n",
+        "def add_file_github(file_name,file_content):\n",
+        "  try:\n",
+        "      file = repo.get_contents(file_name, ref=branch_name)\n",
+        "      sha = file.sha\n",
+        "  except Exception as e:\n",
+        "      sha = None\n",
+        "\n",
+        "  if sha:\n",
+        "      repo.update_file(file_name, \"Update file\", file_content, sha, branch_name)\n",
+        "      # print(f\"Updated {file_name} in {repository_name}\")\n",
+        "  else:\n",
+        "      repo.create_file(file_name, \"Create file\", file_content, branch_name)\n",
+        "      # print(f\"Created {file_name} in {repository_name}\")\n",
+        "\n",
+        "def get_file_content(file_name):\n",
+        "  file_content = repo.get_contents(file_name, ref=branch_name)\n",
+        "  file_content = file_content.decoded_content.decode(\"utf-8\")\n",
+        "  if file_name.split('.')[1]=='txt':\n",
+        "    file_content=eval(file_content)\n",
+        "    return(file_content)\n",
+        "  if file_name.split('.')[1]=='csv':\n",
+        "    file_content=pd.read_csv(StringIO(file_content))\n",
+        "    return(file_content)"
       ],
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 56,
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gL0ePpxym4li"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +415,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNZ+IyLGngQ4BOAEq3DHL/u",
+      "authorship_tag": "ABX9TyPGXGcBJcmELv1StUvSitBr",
       "include_colab_link": true
     },
     "kernelspec": {
