--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/Players_fixed_table.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 59,
       "metadata": {
@@ -39,7 +29,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 4,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -99,7 +89,7 @@
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 62,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -406,8 +396,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPmeBa4+SCpKZRWEKb8et7C",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPmeBa4+SCpKZRWEKb8et7C"
     },
     "kernelspec": {
       "display_name": "Python 3",
