--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -1,16 +1,48 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 59,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Gorg-TjzXeal"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "outputs": [],
       "source": [
-        "%%capture\n",
-        "!pip install requests\n",
-        "!pip install PyGithub  # Install the PyGitHub library"
+        "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/Players_fixed_table.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gorg-TjzXeal",
+        "outputId": "c0617e89-7042-4119-c871-23860741bcf4"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n"
+          ]
+        }
+      ],
+      "source": [
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
+        "def install_package(package_name):\n",
+        "    try:\n",
+        "        subprocess.check_call([sys.executable, '-m', 'pip', 'install', package_name])\n",
+        "        print(f\"Successfully installed {package_name}\")\n",
+        "    except subprocess.CalledProcessError:\n",
+        "        print(f\"Failed to install {package_name}\") # Install the PyGitHub library\n",
+        "\n",
+        "install_package(\"requests\")\n",
+        "install_package(\"PyGitHub\")"
       ]
     },
     {
@@ -396,7 +428,8 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPmeBa4+SCpKZRWEKb8et7C"
+      "authorship_tag": "ABX9TyNNEt9+UrlQQUxEP4SGPDUc",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
