--- a/Players_fixed_table.ipynb
+++ b/Players_fixed_table.ipynb
@@ -236,69 +236,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 245
         },
         "id": "1PCwNHwCbVHv",
-        "outputId": "865e1c2a-a4dc-4b7e-f9ea-58e1141ae173"
+        "outputId": "0c133fa4-59a5-49e6-84db-caca808f411b"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['2000']\n",
-            "['2000', '2001']\n",
-            "['2000', '2001', '2002']\n",
-            "['2000', '2001', '2002', '2003']\n",
-            "['2000', '2001', '2002', '2003', '2004']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021', '2022']\n",
-            "['2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021', '2022', '2023']\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-92179ec772a6>\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mstart_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0mend_date\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2023\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m# create_initial_list(start_date,end_date)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'datetime' is not defined"
           ]
         }
       ],
       "source": [
-        "list_all_names=[]\n",
-        "list_all_urls=[]\n",
+        "def create_initial_list(start_date,end_date):\n",
+        "  list_all_names=[]\n",
+        "  list_all_urls=[]\n",
         "\n",
-        "# Define your start and end dates\n",
+        "  # Define your start and end dates\n",
+        "    # Change this to your desired end date\n",
+        "\n",
+        "  list_year=[]\n",
+        "  for weekly_url_ranking in find_list_weekly_ranking_url(start_date, end_date):\n",
+        "    if weekly_url_ranking.split('rankDate=')[1].split('-')[0] not in list_year:\n",
+        "      list_year.append(weekly_url_ranking.split('rankDate=')[1].split('-')[0])\n",
+        "      print(list_year)\n",
+        "    names_and_url_week=update_names_and_urls(weekly_url_ranking,list_all_names,list_all_urls)\n",
+        "    list_all_names=names_and_url_week[0]\n",
+        "    list_all_urls=names_and_url_week[1]\n",
+        "\n",
+        "  list_all_urls_final=[0 for k in range(len(list_all_urls))]\n",
+        "  for k in range(len(list_all_names)):\n",
+        "    player_name=list_all_names[k]\n",
+        "    for player_url in list_all_urls:\n",
+        "      if player_name==player_url.split('/players/')[1].split('/')[0]:\n",
+        "        list_all_urls_final[k]=player_url\n",
+        "\n",
+        "\n",
         "start_date = datetime(2000, 1, 1)\n",
-        "end_date = datetime(2023, 10, 5)  # Change this to your desired end date\n",
-        "\n",
-        "list_year=[]\n",
-        "for weekly_url_ranking in find_list_weekly_ranking_url(start_date, end_date):\n",
-        "  if weekly_url_ranking.split('rankDate=')[1].split('-')[0] not in list_year:\n",
-        "    list_year.append(weekly_url_ranking.split('rankDate=')[1].split('-')[0])\n",
-        "    print(list_year)\n",
-        "  names_and_url_week=update_names_and_urls(weekly_url_ranking,list_all_names,list_all_urls)\n",
-        "  list_all_names=names_and_url_week[0]\n",
-        "  list_all_urls=names_and_url_week[1]\n",
-        "\n",
-        "list_all_urls_final=[0 for k in range(len(list_all_urls))]\n",
-        "for k in range(len(list_all_names)):\n",
-        "  player_name=list_all_names[k]\n",
-        "  for player_url in list_all_urls:\n",
-        "    if player_name==player_url.split('/players/')[1].split('/')[0]:\n",
-        "      list_all_urls_final[k]=player_url\n"
+        "end_date = datetime(2023, 10, 5)\n",
+        "# create_initial_list(start_date,end_date)"
       ]
     },
     {
@@ -428,7 +415,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyP2IQzHjPttdZpznIf7SGhC",
+      "authorship_tag": "ABX9TyMz5PyYSQ/SYr7IFzoytx8p",
       "include_colab_link": true
     },
     "kernelspec": {
